# resize-rotate-image

./: README.md
bicubic/: CMakeLists.txt
bicubic/src/: lagrange.cpp  lagrange.hpp  main.cpp  scale-image.cpp  scale-image.hpp
bilinear/: CMakeLists.txt
bilinear/src/: main.cpp  scale-image.cpp  scale-image.hpp
nearest_neibor/: CMakeLists.txt
nearest_neibor/src/: main.cpp  scale-image.cpp  scale-image.hpp
rotate-bilinear/: CMakeLists.txt
rotate-bilinear/src/: main.cpp  rotate.cpp  rotate.hpp
